typescript/checker/tests/conformance/scanner/ecmascript5/scannerS7.8.3_A6.1_T1.ts.stderr
error: Expected a hexadecimal digit
  --> $DIR/tests/conformance/scanner/ecmascript5/scannerS7.8.3_A6.1_T1.ts:13:3
   |
13 | 0x
   |   ^

